--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="/icon_large.png" />
     <meta property="og:description" content="Juan Gonzalez De Mendoza's Portfolio" />
     <!-- make the og:image larger -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image" />
     <!-- end of social media card -->
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
