Hard Code Social Media Card on Writings and Blog Posts
- Add social media card tags to the "head" of the writings landing page and all blog posts pages.
- Update the blog post template to both mark and explain what needs to be updated.
- delete "/_includes/social_media_card.js" (RIP)

--- a/writings/20230113-blog_post_tags/index.html
+++ b/writings/20230113-blog_post_tags/index.html
@@ -2,14 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blog Post Tags | Juan Gonzalez De Mendoza</title>
-    <meta name="description" content="Part 2 of the introduction to the writings page and blog post template." />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Juan Gonzalez De Mendoza" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
-    <script src="/_includes/social_media_card.js"></script>
+    <title>Blog Post Tags | Juan Gonzalez De Mendoza</title>
+    <meta property="og:title" content="Blog Post Tags | Juan Gonzalez De Mendoza"/>
+    <meta property="og:url" content="https://juangmendoza.com/writings/20230113-blog_post_tags/" />
+    <meta name="description" content="Description of various tags that can be used in this website's blog post template." />
+    <meta property="og:description" content="Description of various tags that can be used in this website's blog post template." />
+    <meta property="og:image" content="title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
