--- a/writings/20200909-fall_semester_start/index.html
+++ b/writings/20200909-fall_semester_start/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>2020 Fall Semester Start | Juan Gonzalez De Mendoza</title>
-    <meta name="description" content="Reflections on the 2020 Fall Semester so far." />
+    <meta name="description" content="" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
-    <script src="/_includes/social_media_card.js"></script>
+
+    <title>2020 Fall Semester Start | Juan Gonzalez De Mendoza</title>
+    <meta property="og:title" content="2020 Fall Semester Start | Juan Gonzalez De Mendoza"/>
+    <meta property="og:url" content="https://juangmendoza.com/writings/20200909-fall_semester_start/" />
+    <meta name="description" content="Reflections on the 2020 Fall Semester so far." />
+    <meta property="og:description" content="Reflections on the 2020 Fall Semester so far." />
+    <meta property="og:image" content="title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
