--- a/writings/20201210-particle_tracking/index.html
+++ b/writings/20201210-particle_tracking/index.html
@@ -2,14 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Sub-Microscopic Particle Tracking | Juan Gonzalez De Mendoza</title>
-    <meta name="description" content="{Blog Post Description}" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
-    <script src="/_includes/social_media_card.js"></script>
+    <title>Sub-Microscopic Particle Tracking | Juan Gonzalez De Mendoza</title>
+    <meta property="og:title" content="Sub-Microscopic Particle Tracking | Juan Gonzalez De Mendoza"/>
+    <meta property="og:url" content="https://juangmendoza.com/writings/20201210-particle_tracking/" />
+    <meta name="description" content="Sub-Microscopic Particle Tracking Biophysics Research" />
+    <meta property="og:description" content="Sub-Microscopic Particle Tracking Biophysics Research" />
+    <meta property="og:image" content="/icon_large.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
