--- a/writings/20230112-blog_design_intro/index.html
+++ b/writings/20230112-blog_design_intro/index.html
@@ -2,14 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blog Design Intro | Juan Gonzalez De Mendoza</title>
-    <meta name="description" content="Introduction to the writings page and blog post template." />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
-    <script src="/_includes/social_media_card.js"></script>
+    <title>Blog Design Intro | Juan Gonzalez De Mendoza</title>
+    <meta property="og:title" content="Blog Design Intro | Juan Gonzalez De Mendoza"/>
+    <meta property="og:url" content="https://juangmendoza.com/writings/20230112-blog_design_intro/" />
+    <meta name="description" content="Introduction to the writings page and blog post template." />
+    <meta property="og:description" content="Introduction to the writings page and blog post template." />
+    <meta property="og:image" content="title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
