--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="description" content="Juan Gonzalez De Mendoza" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Social Media Card -->
+    <meta name="author" content="Juan Gonzalez De Mendoza" />
+    <meta property="og:title" content="Juan Gonzalez De Mendoza"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://juangmendoza.com/" />
+    <meta property="og:image" content="/icon_large.png" />
+    <meta property="og:description" content="Juan Gonzalez De Mendoza's Portfolio" />
+    <!-- make the og:image larger -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- end of social media card -->
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/home/index.css">
-    <script src="/_includes/social_media_card.js"></script>
   </head>
   <body>
     <script src="/_includes/header.js"></script>
