Add missing tags to existing blog pages' "head"

--- a/writings/20230112-blog_design_intro/index.html
+++ b/writings/20230112-blog_design_intro/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Juan Gonzalez De Mendoza" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
@@ -12,7 +15,7 @@
     <meta property="og:url" content="https://juangmendoza.com/writings/20230112-blog_design_intro/" />
     <meta name="description" content="Introduction to the writings page and blog post template." />
     <meta property="og:description" content="Introduction to the writings page and blog post template." />
-    <meta property="og:image" content="title-card.png" />
+    <meta property="og:image" content="./title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
