--- a/writings/20230113-blog_post_tags/index.html
+++ b/writings/20230113-blog_post_tags/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://juangmendoza.com/writings/20230113-blog_post_tags/" />
     <meta name="description" content="Description of various tags that can be used in this website's blog post template." />
     <meta property="og:description" content="Description of various tags that can be used in this website's blog post template." />
-    <meta property="og:image" content="title-card.png" />
+    <meta property="og:image" content="./title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
