--- a/writings/20201210-particle_tracking/index.html
+++ b/writings/20201210-particle_tracking/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Juan Gonzalez De Mendoza" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
