Remove variable og:image
All blog posts now use website's default og:image

--- a/writings/20230113-blog_post_tags/index.html
+++ b/writings/20230113-blog_post_tags/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Juan Gonzalez De Mendoza" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/icon_large.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
@@ -15,7 +16,6 @@
     <meta property="og:url" content="https://juangmendoza.com/writings/20230113-blog_post_tags/" />
     <meta name="description" content="Description of various tags that can be used in this website's blog post template." />
     <meta property="og:description" content="Description of various tags that can be used in this website's blog post template." />
-    <meta property="og:image" content="./title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
