--- a/writings/20200909-fall_semester_start/index.html
+++ b/writings/20200909-fall_semester_start/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Juan Gonzalez De Mendoza" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/icon_large.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
@@ -17,7 +18,6 @@
     <meta property="og:url" content="https://juangmendoza.com/writings/20200909-fall_semester_start/" />
     <meta name="description" content="Reflections on the 2020 Fall Semester so far." />
     <meta property="og:description" content="Reflections on the 2020 Fall Semester so far." />
-    <meta property="og:image" content="./title-card.png" />
   </head>
   <body>
     <script src="/_includes/header.js"></script>
