added phd to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -45,6 +45,24 @@
 
           <section id="education">
             <h3>Education</h3>
+
+            <div class="flex">
+              <span>
+                <b>&#x2022;</b>
+                Ph.D. in Physics with a concentration in Quantum Information
+              </span>
+            </div>
+
+            <ul>
+              <li class="flex">
+                <span>
+                  The University of New Mexico
+                  <br  />
+                  <span class="inset-block">GPA: 3.67</span>
+                </span>
+                <span>2021 - Present</span>
+              </li>
+            </ul>
             <div class="flex">
               <span>
                 <b>&#x2022;</b>
