--- a/writings/index.html
+++ b/writings/index.html
@@ -32,7 +32,7 @@
 
         <h1>Writings</h1>
 
-        <!-- ↓↓↓ remove me or comment me out ↓↓↓ -->
+        <!-- ↓↓↓ remove me or comment me out ↓↓↓ 
         <h2>Writings Page Info (to be removed or commented out)</h2>
         <p>
           You can mix and match grid-style links and list-style links on this
@@ -99,10 +99,10 @@
               new blog posts.
             </p>
           </article>
-        </div>
+        </div>-->
         <!-- ↑↑↑ remove me or comment me out ↑↑↑ -->
 
-        <h2>Physics Papers</h2>
+        <h2>Physics Writings</h2>
         <div class="article-list">
           <h3>Miscellaneous</h3>
           <article>
@@ -157,8 +157,7 @@
         <h2>Research</h2>
         <p>
           The purpose of this section on my website is to have a keepsake for
-          myself of all the research I have done. I will upload all the new
-          research I do here, especially as I start grad school in 2021.
+          myself of all the research I have done. 
         </p>
         <div class="article-list">
           <h3>Biophysics</h3>
