--- a/writings/index.html
+++ b/writings/index.html
@@ -107,11 +107,17 @@
           <h3>Miscellaneous</h3>
           <article>
             <h4>
+              <a href="./20230114-magic_states/Magic_State_Distillation.pdf">Magic State Distillation, a simplified summary of Bravyi, Kitaev 2004</a>
+            </h4>
+            <span class="date-text">May 2022</span>
+          </article>
+          <article>
+            <h4>
               <a href="./20190400-vaidmans_bomb/Vaidman_s_Bomb.pdf">Elitzur-Vaidman's Bomb summary and its consequences</a>
             </h4>
             <span class="date-text">April 2019</span>
           </article>
-          <h3>Modern Experiments</h3>
+          <h3>Modern Lab Experiments</h3>
           <article>
             <h4>
               <a href="./20190400-speed_of_light/Speed_of_Light.pdf">Measuring the speed of light with rotating mirrors</a>
