changed cringey about me

--- a/about/index.html
+++ b/about/index.html
@@ -38,19 +38,19 @@
         </section>
 
         <p>
-          I recently graduated from The University of Texas at Austin (UT) with degrees in Computer Science and Physics and a certificate in Quantum Information. I am starting a Physics Ph.D. track at the University of New Mexico with a focus (most likely) in quantum computing.
+          I am a doctoral student at The University of New Mexico studying quantum information science. I finished my undergraduate studies The University of Texas at Austin with degrees in Computer Science, Physics and a certificate in quantum information.
         </p>
         <h2>Background</h2>
         <p>
-          I was born and raised in Venezuela in a sugar cane farm and alcohol distillery called Central Matilde built by my great grandparents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not to get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years at Austin Community College, and then transferred to UT as a Computer Science student.
+          I was born and raised in a small town in Venezuela called Chivacoa. After graduating high school I moved to Texas solely for the contuniation of my education. I began at Austin Community College as a computer science major, and later transfered to UT.
         </p>
         <p>
-          Since high school, I have been very interested in Physics, but it wasn't until I transferred that I began to read books on quantum mechanics and found I had a special passion for it. At that time, I knew if I did not pursue this passion, I would regret it later in my life. As I was only one year away from completing my Computer Science degree, I decided to add Physics as a second major.
+          In an attempt to keep the stereotype alive, I am an avid climber and coder on my free time :)
         </p>
         <h2>Contact</h2>
         <p>
           The best way to reach me is via email at
-          <a href="mailto:juangmendoza@utexas.edu">juangmendoza@utexas.edu</a>.
+          <a href="mailto:juangmendoza@utexas.edu">juangmendozap@outlook.com</a>.
         </p>
 
       </div>
