changed pic and fixed casecomp reference

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
         <section id="overview">
           <figure>
             <figcaption class="emphasized">Juan G Mendoza</figcaption>
-            <img src="./profile.png" alt="Profile Photo" />
+            <img src="./profile2.jpeg" alt="Profile Photo" />
           </figure>
         </section>
 
