--- a/resume/index.html
+++ b/resume/index.html
@@ -385,7 +385,7 @@
               suppliers and alert them of any customizable relevant events that
               may affect Cisco's supply chain.
             </p>
-            <img src="./assets/CaseComp.png" alt="Cisco Award" width="376" height="224" />
+            <img src="./assets/CaseComp.PNG" alt="Cisco Award" width="376" height="224" />
             <!--  -->
             <span>
               <b>&#x2022;</b>
