--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
         <section id="overview">
           <figure>
             <figcaption class="emphasized">Juan G Mendoza</figcaption>
-            <img src="./profile2.jpeg" alt="Profile Photo" height="409" />
+            <img src="./profile2.jpeg" alt="Profile Photo" style="height:70%;" />
           </figure>
         </section>
 
