--- a/writings/index.html
+++ b/writings/index.html
@@ -158,6 +158,19 @@
               Reflections on the 2020 Fall Semester so far.
             </p>
           </article>
+
+          <article>
+            <a href="./20230115-superposition/">
+              <img src="./20230115-superposition/title-card.png" alt="Superposition Title Card" />
+            </a>
+            <h3>
+              <a href="./20230115-superposition/">Superposition 101</a>
+            </h3>
+            <span class="date-text">January 15th, 2023</span>
+            <p>
+              A beginners guide to superposition
+            </p>
+          </article>
         </div>
 
         <h2>Research</h2>
