superposition post minor changes

--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -36,9 +36,9 @@
           <!-- ↓↓↓ replace me with your blog post content ↓↓↓ -->
 
           <p>
-            This post is meant for anyone trying to understand what all the hype about quantum computers is about, but is wanting to understand a little more the jargon mentioned in all the articles about it. More specifically, if you have a basic understanding of vectors, and want to learn what "superposition" means, you are in the right place! Hopefully after this you will be able to picture more than the common phrase used to explain it; "it is in both states at the same time!"
+            This post is meant for the layman interested in quantum computing, but is wanting to understand a little more the jargon mentioned in all the articles about it. More specifically, if you have a basic understanding of vectors, and want to learn what "superposition" means, you are in the right place! Hopefully after this you will be able to picture more than the common phrase used to explain it; "it is in both states at the same time!"
           </p>
-          <h2>Mathematical Definition</h2>
+          <h4>Mathematical Definition</h4>
           <p>
             Classical computers, like the one you are reading this article on, work with bits. A bit is any system that has two possible states. The convention is to label these states as "0" and "1". We are then able to represent information as a string of bits and create algorithms that process these strings in such a way that solves a problem we want.
           </p>
@@ -72,9 +72,9 @@
           <p>
             Thus, the second way to write this vector is exactly that, the addition of these two scaled unit vectors: 1.5 x̂ + 2 ŷ. This is what is formally called a “linear combination”. Our blue vector is a linear combination of  x̂  and ŷ, furthermore, any vector in this 2-D plane can be represented as a linear combination of these two unit vectors.
           </p>
-
+          <h4> What does this math mean physically?</h4>
           <p>
-            Let’s take a step back and remember the sentence we are trying to explain “Superposition is the ability of a quantum system to be in a state which is a linear combination of many other distinct quantum states We have now learned what a linear combination is, but in terms of unit vectors, how do we make a linear combination of quantum states? It turns out that quantum states, in fact, are vectors too! (Instead of vectors in 2-D space, they are vectors in something called Hilbert Space, but this should not change anything mentioned in this discussion) . Instead of putting hats on top of the letters, quantum states are conventionally represented as follows: |x⟩. If we were to use our previous example, but for a quantum system, we could write the linear combination as 1.5 |x⟩ + 2 |y⟩. Have in in mind, that |x⟩ and |y⟩ represent distinct quantum states and the linear combination of them is itself a new quantum state, which is a superposition  of the other two! It is also important to note that these constants which we called components before, are called “amplitudes” in quantum mechanics. For example, one could say the state |x⟩ has an amplitude of 1.5.
+            Let’s take a step back and remember the sentence we are trying to explain “Superposition is the ability of a quantum system to be in a state which is a linear combination of many other distinct quantum states" We have now learned what a linear combination is, but in terms of unit vectors, how do we make a linear combination of quantum states? It turns out that quantum states, in fact, are vectors too! (Instead of vectors in 2-D space, they are vectors in something called Hilbert Space, but this should not change anything mentioned in this discussion) . Instead of putting hats on top of the letters, quantum states are conventionally represented as follows: |x⟩. If we were to use our previous example, but for a quantum system, we could write the linear combination as 1.5 |x⟩ + 2 |y⟩. Have in in mind, that |x⟩ and |y⟩ represent distinct quantum states and the linear combination of them is itself a new quantum state, which is a superposition  of the other two! It is also important to note that these constants which we called components before, are called “amplitudes” in quantum mechanics. For example, one could say the state |x⟩ has an amplitude of 1.5.
           </p>
 
           <p>
