fixed math with mathJax

--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -18,6 +18,10 @@
     <meta property="og:url" content="https://juangmendoza.com/writings/20230115-superposition/" />
     <meta name="description" content="A beginner's guide to understanding superposition." />
     <meta property="og:description" content="A beginner's guide to understanding superposition." />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </head>
   <body>
     <script src="/_includes/header.js"></script>
@@ -82,7 +86,7 @@
           </p>
 
           <p>
-            There is a question that comes naturally from learning about superposition, what does this really mean? What does this mathematical concept represent physically? You see, superposition is a mathematical implication of some physical phenomena that had been observed back when quantum mechanics was being formulated. But the reality is that when we measure a quantum system the superposition disappears. For example, if we have a qubit in some superposition, after we measure it we will observe the qubit to be either in the 1 state or the 0 state, we don’t directly observe any combination. Because of this, physicists had a hard time figuring out what a superposition represented in our real world. After all, physics is the application of mathematical frameworks to our world, it had to represent something. Later on, it was suggested by physicist M. Born that the amplitude of a quantum state in a superposition, is related to the probability of observing this state. To be more specific, the probability of measuring a quantum state is equal to the absolute value of the amplitude squared. For example, if we have a superposition where one of the terms is1/(√3)|0⟩ then the probability of observing a 0 when we measure it is 〖|1/√3|〗^2=1/3. This is one of the postulates of quantum mechanics, which means we assume it is true, due to experimental evidence, but we don’t know why it is so. Also, In order to follow standard probability convention, we want our probabilities to add up to 1. This restricts our vector to have a length of size 1. 
+            There is a question that comes naturally from learning about superposition, what does this really mean? What does this mathematical concept represent physically? You see, superposition is a mathematical implication of some physical phenomena that had been observed back when quantum mechanics was being formulated. But the reality is that when we measure a quantum system the superposition disappears. For example, if we have a qubit in some superposition, after we measure it we will observe the qubit to be either in the 1 state or the 0 state, we don’t directly observe any combination. Because of this, physicists had a hard time figuring out what a superposition represented physically. After all, physics is the application of mathematical frameworks to our world, it had to represent something. Later on, it was suggested by physicist M. Born that the amplitude of a quantum state in a superposition, is related to the probability of observing this state. To be more specific, the probability of measuring a quantum state is equal to the absolute value of the amplitude squared. For example, if we have a superposition where one of the terms is \(1 \over \sqrt{3}\)|0⟩ then the probability of observing a 0 when we measure it is \(|{{1\over \sqrt{3}}|}^2\) = \(1 \over 3\) . This is one of the postulates of quantum mechanics, which means we assume it is true, due to experimental evidence, but we don’t know why it is so. Also, In order to follow standard probability convention, we want our probabilities to add up to 1. This restricts our vector to have a length of size 1. 
           </p>
 
           <p>
