--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="A beginner's guide to understanding superposition." />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async
-          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-svg.js">
     </script>
   </head>
   <body>
