--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -40,7 +40,7 @@
           <!-- ↓↓↓ replace me with your blog post content ↓↓↓ -->
 
           <p>
-            This post is meant for the layman who read some articles about quantum computing or just quantum mechanics in general, and that is wanting to understand a little more of the jargon mentioned in them. Maybe you just watched a youtube video from a questionable yoga instructor/guru claiming you can "place your mind in superposition with the earth" and wanted to know what the hell they meant. This is the place for you! All you will need to understand this post (or so I claim) is a basic understanding of vectors. My hope is that anyone able to follow this post should be able to understand "quantum superposition" beyond the popular phrase "it is in both states at the same time!". 
+            This post is meant for the layman who read some articles about quantum computing or just quantum mechanics in general, and that is wanting to understand a little more of the jargon mentioned in them. Maybe you just watched a youtube video from a questionable yoga instructor/guru claiming you can "place your mind in superposition with the earth" and wanted to know what the hell they meant. This is the place for you! All you will need to understand this post (or so I claim) is a basic understanding of vectors. My hope is that anyone able to follow this post should be able to understand quantum superposition beyond the popular phrase "it is in both states at the same time!". 
           </p>
           <h4>Mathematical Definition</h4>
           <p>
