I lied I am sorry

--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -44,7 +44,7 @@
           </p>
           <h4>Mathematical Definition</h4>
           <p>
-            Classical computers, like the one you are reading this article on, work with bits. A bit is any system that has two possible states. The convention is to label these states as "0" and "1". We are then able to represent information as a string of bits and create algorithms that process these strings in such a way that solves a problem we want.
+            Classical computers, like the one you are reading this article on, work with bits. A bit is any system that has two possible states. The convention is to label these states as "0" and "1". We are then able to represent information as a collection of bits and create algorithms that process these bitss in such a way that solves a problem we want.
           </p>
           <p>
             Quantum computers are built out of qubits. Qubits are bits that take advantage of quantum phenomena, to be more specific, superposition. Superposition is the ability of a quantum system to be in a state which is a linear combination of many other distinct quantum states. 
