added missing footnote

--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -90,7 +90,7 @@
           </p>
 
           <p>
-            If we put everything we have learned together, we can represent a qubit in a graph such as the one below. Where the horizontal axis represents the |0⟩ state and the vertical axis represents the |1⟩ state, and where the vector must lie on the surface of a circle of radius 1.
+            If we put everything we have learned together, we can represent a qubit in a graph such as the one below. Where the horizontal axis represents the |0⟩ state and the vertical axis represents the |1⟩ state, and where the vector must lie on the surface of a circle of radius 1<a href="#footnote-1">[1]</a>.
           </p>
 
           <img src="./figure5.png" alt="Figure 5" style="height:300px">
@@ -107,6 +107,8 @@
         </article>
 
       </div>
+      <p id="footnote-1">[1] One thing I did not mention, is that amplitudes are complex numbers. This means that an imaginary part could be added to the real one shown throughout this post. In terms of the graph this means there is one more dimension that needs to be added, going in and out of the page. With this extra dimension you are able to truly represent every possible quantum superposition</p>
+
     </main>
 
     <script src="/_includes/footer.js"></script>
