Update Email Address
Change references to the old email address everywhere that it was referenced - the about page, the resume page, and the website footer.

--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@
         <h2>Contact</h2>
         <p>
           The best way to reach me is via email at
-          <a href="mailto:juangmendoza@utexas.edu">juangmendozap@outlook.com</a>.
+          <a href="mailto:juangmendozap@outlook.com">juangmendozap@outlook.com</a>.
         </p>
 
       </div>
