--- a/resume/index.html
+++ b/resume/index.html
@@ -427,7 +427,7 @@
             <h3>Contact</h3>
             <p>
               The best way to reach me is via email at
-              <a href="mailto:juangmendoza@utexas.edu">juangmendoza@utexas.edu</a>.
+              <a href="mailto:juangmendozap@outlook.com">juangmendozap@outlook.com</a>.
             </p>
           </section>
 
