--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
         <section id="overview">
           <figure>
             <figcaption class="emphasized">Juan G Mendoza</figcaption>
-            <img src="./profile.jpeg" alt="Profile Photo" style="height:500px" />
+            <img src="./profile.jpeg" alt="Profile Photo" style="max-height:500px" />
           </figure>
         </section>
 
