Added Support for Portrait Article Card Images
Added a CSS class that can be added to portrait orientation article card images, which prevents cropping in of the image and adds dark bars to either side to fill out the 2/1 area.

Added this class to the homepage "About Me" image.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
           <article>
             <a href="/about/">
-              <img src="./home/assets/about.jpeg" alt="About Page Image" />
+              <img class="portrait" src="./home/assets/about.jpeg" alt="About Page Image" />
             </a>
             <h2>
               <a href="/about/">About Me</a>
