Added Random Homepage Background Squares

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- make the og:image larger -->
     <meta name="twitter:card" content="summary_large_image" />
     <!-- end of social media card -->
+    <script src="/home/index.js" defer></script>
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/home/index.css">
